@@ -30,11 +30,18 @@ extern "C" {
 #endif
 
 
+	typedef struct pattern_st GT_GrepPattern;
+
 	#define IDX_MAP_LEN 0x1ffff
 
 	typedef struct {
+		size_t count;
+		size_t element_count[IDX_MAP_LEN];
+	} GT_ElementCounter;
+
+	typedef struct {
 		const char *file_name;
-		char *pattern;
+		GT_GrepPattern *pattern;
 		int magic_len;
 		bool print_tlv_hdr;
 		bool print_tlv_hdr_only;
@@ -46,8 +53,10 @@ extern "C" {
 	} GT_GrepTlvConf;
 
 	void GT_GrepTlv_initConf(GT_GrepTlvConf *conf);
-	int  GT_grepTlv(GT_GrepTlvConf *conf, char *pattern, char *prefix, int *map, unsigned char *buf, GT_FTLV *t, unsigned char *raw, size_t *rlen);
 
+	int GT_grepTlv(GT_GrepTlvConf *conf, GT_GrepPattern *pattern, char *prefix, GT_ElementCounter *map, unsigned char *buf, GT_FTLV *t, unsigned char *raw, size_t *rlen);
+	int GT_GrepPattern_parse(const char *in, GT_GrepPattern **out);
+	void GT_GrepPattern_free(GT_GrepPattern *p);
 
 #ifdef __cplusplus
 }
